--- a/app/app.css
+++ b/app/app.css
@@ -16,6 +16,14 @@ body {
     width: 100%;
 }
 
+.well {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+// this fixes the a href problem with angularjs + bootstrap
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; } 
+
 
 /* Sticky footer styles
  * -------------------------------------------------- */
