minor changes to web ui templates

--- a/app/search/templates/albumResult.html
+++ b/app/search/templates/albumResult.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <strong class="pull-left"><a href="{{ result.location }}" ng-bind="getTitle(result)"></a></strong><p class="pull-right">{{ result.timestamp }}</p>
+    <strong class="pull-left"><a href="{{ result.location }}" ng-bind="getTitle(result)"></a></strong>
     <br>
     <div class="pull-left">
         {{ result['metaData']['count'] }} images
