--- a/app/search/templates/newsResult.html
+++ b/app/search/templates/newsResult.html
@@ -1,25 +1,28 @@
 <div class="well">
-    <strong class="pull-left">
-        <a href="{{ result.location }}" ng-bind="getTitle(result)"></a>
-    </strong>
-    <p class="pull-right">
-        <span class="badge" style="margin-right: 7px;">{{ result['metaData']['channel'] }}</span>
-        {{ result.timestamp }}
-    </p>
-    <br>
-    <span ng-bind-html="boldText(result.data)"></span>
+  <strong class="pull-left">
+    <a href="{{ result.location }}" ng-bind="getTitle(result)"></a>
+  </strong>
+  <p class="pull-right">
+    <span class="badge" style="margin-right: 7px;">{{ result['metaData']['channel'] }}</span>
+      {{ result.timestamp }}
+  </p>
+  <br>
+  <span ng-bind-html="boldText(result.data)"></span>
+  <br />
+  <div class="pull-left">
     <br />
-    <div class="pull-left">
-        <br />
-        <strong ng-show="result['username']">username:</strong> {{ result['username'] }}
-        &nbsp; &nbsp; &nbsp;
-        <strong>source:</strong> {{ result.moduleName}}
-    </div>
-    <div class="pull-right">
-        <a ng-href="{{ getRaw(result) }}"><button class="btn btn-default">get raw</button></a>
-    </div>
-    <br />
-    <br />
+    <strong ng-show="result['username']">username:</strong> 
+    <a href="https://profiles.csh.rit.edu/user/{{ result['username'] }}">
+      {{ result['username'] }}
+    </a>
+    &nbsp; &nbsp; &nbsp;
+    <strong>source:</strong> {{ result.moduleName}}
+  </div>
+  <div class="pull-right">
+    <a ng-href="{{ getRaw(result) }}"><button class="btn btn-default">get raw</button></a>
+  </div>
+  <br />
+  <br />
 </div>
 
 
