--- a/app/search/templates/pdfResult.html
+++ b/app/search/templates/pdfResult.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <strong class="pull-left"><a href="{{ result.location }}" ng-bind="getTitle(result)"></a></strong><p class="pull-right">{{ result.timestamp }}</p>
+    <strong class="pull-left" ng-bind="getTitle(result)"></strong><p class="pull-right">{{ result.timestamp }}</p>
     <br>
     <div class="row">
         <div class="col-md-10">
